--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         header {
             background: #0056b3;
             background: linear-gradient(135deg, #0056b3 0%, #003d7a 100%);
-            color: #fff;
+            color: 01030e;
             padding: 30px 0;
             text-align: center;
             margin-bottom: 30px;
@@ -97,7 +97,7 @@
             margin-top: 40px;
             padding: 20px;
             background: #0056b3;
-            color: #fff;
+            color: 01030e;
             border-radius: 8px;
         }
         ul, ol {
